# zerver

./: .gitignore  Cargo.toml  hello.html  notes.txt  readme.md  script.js  stylesheet.css  update_dns.bash
scripts/: pngcrushdir.sh
src/: authentication.rs  file_handler.rs  handler.rs  main.rs  request_handler.rs
website/: 3d_designs.html  about.html  hello.html  hellostyles.css  home.html  homestyles.css  image.html  login.html  mandarin_navigator.html  navie.html  oscar.html  part0007.html  part0007.js  readme.md  resume.html  script.js  scylla.html  sidebar.html  style.css
website/secured/: obsidian.html  rhyolite.html  secured_home.html  sidebar_ext.html
