[package]
name = "zerver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
rustls = "0.20"
tokio-rustls = "0.22"
hyper = { version = "0.14", features = ["http1"] }
futures = "0.3"
argon2 = "0.5.3"
